workspace(name = "kotlin-language-server")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

rules_kotlin_version = "1.7.1"
rules_kotlin_sha = "fd92a98bd8a8f0e1cdcb490b93f5acef1f1727ed992571232d33de42395ca9b3"
http_archive(
    name = "io_bazel_rules_kotlin",
    urls = ["https://github.com/bazelbuild/rules_kotlin/releases/download/v%s/rules_kotlin_release.tgz" % rules_kotlin_version],
    sha256 = rules_kotlin_sha,
)

load("@io_bazel_rules_kotlin//kotlin:repositories.bzl", "kotlin_repositories", "versions")
kotlin_repositories() # if you want the default. Otherwise see custom kotlinc distribution below

load("@io_bazel_rules_kotlin//kotlin:core.bzl", "kt_register_toolchains")
kt_register_toolchains() # to use the default toolchain, otherwise see toolchains below
#register_toolchains("//bazel:experimental_toolchain")


http_archive(
    name = "rules_jvm_external",
    sha256 = versions.RULES_JVM_EXTERNAL_SHA,
    strip_prefix = "rules_jvm_external-%s" % versions.RULES_JVM_EXTERNAL_TAG,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % versions.RULES_JVM_EXTERNAL_TAG,
)

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    artifacts = [
        "com.beust:jcommander:1.78",
        "com.github.fwcd.ktfmt:ktfmt:b5d31d1",
        "com.h2database:h2:1.4.200",
        "junit:junit:4.11",
        "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.15.0",
        "org.eclipse.lsp4j:org.eclipse.lsp4j:0.15.0",
        "org.hamcrest:hamcrest-all:1.3",
        "org.jetbrains.exposed:exposed-core:0.37.3",
        "org.jetbrains.exposed:exposed-dao:0.37.3",
        "org.jetbrains.exposed:exposed-jdbc:0.37.3",
        "org.jetbrains.kotlin:kotlin-compiler:1.8.10",
        #"org.jetbrains.kotlin:kotlin-jvm:1.8.10",
        "org.jetbrains.kotlin:kotlin-reflect:1.8.10",
        "org.jetbrains.kotlin:kotlin-sam-with-receiver-compiler-plugin:1.8.10",
        "org.jetbrains.kotlin:kotlin-scripting-compiler:1.8.10",
        "org.jetbrains.kotlin:kotlin-scripting-jvm-host-unshaded:1.8.10",
        "org.jetbrains.kotlin:kotlin-scripting-jvm-host:1.8.10",
        "org.jetbrains.kotlin:kotlin-stdlib:1.8.10",
        #"org.jetbrains:fernflower:1.0",
        "org.jetbrains:intellij-fernflower:1.0.0.1",
        "org.openjdk.jmh:jmh-core:1.20",
        "org.openjdk.jmh:jmh-generator-annprocess:1.20",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
        "https://jitpack.io",
        "https://repo.gradle.org/gradle/libs-releases",
        "https://maven.fabricmc.net",
        "file:///home/ben/git/kotlin-language-server/server/lib",
    ],
)
