#load("@rules_java//java:defs.bzl", "java_binary")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_binary")

kt_jvm_library(
    name = "server_lib",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    deps = [],
)

kt_jvm_binary(
    name = "server",
    main_class = "org.javacs.kt.Main",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    #deps = [":server_lib"],
)


# ./server/src/main/kotlin



